@@ -10,6 +10,8 @@ class Net::SSLeay::OPENSSL {
   
   native static method add_all_algorithms : void ();
   
+  native static method init_crypto : int ($opts : long, $settings : Net::SSLeay::OPENSSL_INIT_SETTINGS);
+  
   native static method init_ssl : int ($opts : long, $settings : Net::SSLeay::OPENSSL_INIT_SETTINGS);
   
 }
