@@ -8,6 +8,7 @@
     * Add Net::SSLeay::PKCS12#new method.
     * Add Net::SSLeay::DER#(i2d_TYPE|d2i_TYPE|d2i_TYPE_bio) methods.
     * Add Net::SSLeay::PKCS12#parse method.
+    * Add Net::SSLeay::OPENSSL#init_crypto method.
     
   [Incompatible Changes]
     * Add an exception to Net::SSLeay::OBJ#nid2obj method.
